--- a/maplevanillagranola.html
+++ b/maplevanillagranola.html
@@ -78,7 +78,7 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="/bars">Bars</a>
+                  <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
@@ -104,51 +104,130 @@
           </button>        
         </nav>
       </header>
+  </div>
 
+  <div class="container">
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Bars</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/applepiebars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/applepiebars.jpg" class="w-100" alt="Apple Pie Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/applepiebars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Apple Pie Bars</a>
-            </figcaption>
-          </figure>
+      <div class="d-sm-flex">
+        <div class="tstbite-svg order-sm-2 ms-auto">
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
-            </figcaption>
-          </figure>
+        <div>
+          <strong>
+            <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+            </svg>
+            <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+          </strong>
+          <h5 class="py-3 mb-0 h2">Maple Vanilla Granola</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/maplevanillagranola" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/maplevanillagranola.jpg" class="w-100" alt="Maple Vanilla Granola">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/maplevanillagranola" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Maple Vanilla Granola</a>
-            </figcaption>
-          </figure>
+      <div class="d-flex flex-wrap">
+        <div class="my-2 me-4">
+          <small class="ps-1">Author: Medical Medium</small>
+        </div>
+        <div class="my-2 me-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
+            <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
+          </svg>
+          <small>December 11th, 2023</small>
+        </div>
+      </div>
+      <div class="blog-detail">
+        <hr>
+        <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
+          <img src="assets/images/food/maplevanillagranola.jpg" class="w-100" >
+        </div>
+        <br>
+        <div class="row mt-0 mt-md-5">
+          <div class="col-md-12">
+            <ul class="list-unstyled component-list tstbite-svg">
+              <li>
+                <small>Prep Time</small>
+                <span>10 minutes</span>
+              </li>
+              <li>
+                <small>Cook Time</small>
+                <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>35 minutes</span>
+              </li>
+              <li>
+                <small>Serving</small>
+                <span>8
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-4 mt-md-5">
+              <h6>Ingredients</h6>
+              <div class="checklist pb-2">
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="oats">1 1/2 cup gluten free oats</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="coconut">1/4 cup unsweetened shredded coconut</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="flaxseed">1/4 cup ground flaxseed</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="maplesyrup">1/6 cup maple syrup</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="coconutoil">1/4 cup melted coconut oil</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="vanilla">1 tablespoon alcohol-free vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="cinnamon">1/2 teaspoon cinnamon</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-5">
+              <h6>Instructions</h6>
+              <ul class="instruction-list list-unstyled">
+                <li>
+                  <span>1</span>
+                  Preheat oven to 300°F. Line a baking sheet with parchment paper. Set aside.
+                </li>
+                <li>
+                  <span>2</span>
+                  Combine the oats, coconut, and ground flaxseed in a large bowl. Stir until evenly mixed.
+                </li>
+                <li>
+                  <span>3</span>
+                  Add in the maple syrup, coconut oil, vanilla, and cinnamon. Stir until well incorporated.
+                </li>
+                <li>
+                  <span>4</span>
+                  Spread the mixture out evenly on the prepared baking sheet to about 1/4 inch thick.
+                </li>
+                <li>
+                  <span>5</span>
+                  Bake for 25-30 minutes, or until golden brown.
+                </li>
+                <li>
+                  <span>6</span>
+                  Remove from oven and cool for 10 minutes without touching. Then break up into smaller pieces and cool completely. Serve immediately or keep in an airtight container for up to a week.
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -160,7 +239,6 @@
   </footer>
 </section>
 
-<!-- Tastebite Scripts -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/html5.min.js"></script>
 <script src="assets/js/sticky.min.js"></script>
