--- a/sweet.html
+++ b/sweet.html
@@ -224,6 +224,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/maplevanillagranola" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/maplevanillagranola.jpg" class="w-100" alt="Maple Vanilla Granola">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/maplevanillagranola" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Maple Vanilla Granola</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
