--- a/fusilliallavodka.html
+++ b/fusilliallavodka.html
@@ -226,7 +226,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Heat oil in a large skillet over medium. Add shallot and garlic and cook, stirring occasionally, until softened, about 5 minutes. Add tomato paste and cook, stirring occasionally, until paste is brick red and starts to caramelize, about 5 minutes. Add vodka and cook, stirring constantly, until liquid is mostly evaporated, about 2 minutes. Add cream and red pepper flakes and stir until well blended. Season with salt and pepper; remove from heat.
+                  Heat oil in a large skillet over medium. Add shallot and garlic and cook, stirring occasionally, until softened, about 5 minutes. Add tomato paste and cook, stirring occasionally, until paste is brick red and starts to caramelize, about 5 minutes. Add vodka and cook, stirring constantly, until liquid is mostly evaporated, about 2 minutes. Add cream and red pepper flakes and stir until well blended. Season with salt and pepper. Remove from heat.
                 </li>
                 <li>
                   <span>3</span>
