--- a/puddingchocolatechipcookies.html
+++ b/puddingchocolatechipcookies.html
@@ -119,18 +119,18 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <h5 class="py-3 mb-0 h2">Pudding Chocolate Chip Cookies</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Wife Mama Foodie</small>
+          <small class="ps-1">Author: Two Peas & Their Pod</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>December 17th, 2023</small>
+          <small>January 23rd, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
@@ -144,7 +144,7 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>20 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
@@ -152,11 +152,11 @@
               </li>
               <li>
                 <small>Total Time</small>
-                <span>30 minutes</span>
+                <span>40 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>6-7 large cookies or 10 small cookies
+                <span>36 cookies
                 </span>
               </li>
             </ul>
@@ -167,43 +167,43 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">2 cups finely ground almond flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="crackers">1 cup unsalted butter, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="arrowroot">2 tablespoons arrowroot starch</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingsoda">1/2 teaspoon baking soda</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/4 teaspoon salt</label>
+                  <label class="form-check-label" for="crackers">1 (3.4oz) package vanilla instant pudding mix</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="maplesyrup">1/4 cup pure maple syrup</label>
+                  <label class="form-check-label" for="unsalted">2 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="water">3 tablespoons water</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="coconutoil">2 tablespoons melted coconut oil</label>
+                  <label class="form-check-label" for="unsalted">2 1/4 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="chocolate">3/4-1 cup chocolate chips or chopped chocolate, use more or less to taste</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flakysalt">Flaky sea salt, for sprinkling</label>
+                  <label class="form-check-label" for="unsalted">2 cups semi-sweet chocolate chips (I use Trader Joe's)</label>
                 </div>
               </div>
             </div>
@@ -214,50 +214,27 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
+                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium bowl, mix together dry ingredients: flour, arrowroot, baking soda, and salt. 
+                  Using a mixer, beat together butter and sugars until creamy. Add in pudding mix, eggs, and vanilla extract.
                 </li>
                 <li>
                   <span>3</span>
-                  Add maple syrup, water, coconut oil, and vanilla, mixing just until combined. Stir in chocolate.
+                  In a medium bowl, whisk together the flour, baking soda, and salt. Add the dry ingredients to the wet ingredients and mix until just combined. Stir in the chocolate chips.
                 </li>
                 <li>
                   <span>4</span>
-                  Roll into large balls, about 2-3 tablespoons of dough per each. This recipe makes about 6-7 decent sized cookies or 10 smaller cookies.
+                  Drop cookie dough by rounded tablespoons onto prepared baking sheet.
                 </li>
                 <li>
                   <span>5</span>
-                  Gently flatten the balls of dough as these don't spread much on their own. Bake for 8-10 minutes, until lightly brown. Don't over bake.
-                </li>
-                <li>
-                  <span>6</span>
-                  Remove and let cool on the pan thoroughly to keep them from falling apart easily. Sprinkle with a bit of flaked sea salt, if desired.
+                  Bake for 10-12 minutes, or until slight golden and set around the edges. The centers should still be soft. Remove cookies from oven. Let the cookies cool on the baking sheet for a few minutes. Transfer to a cooling rack and cool completely.
                 </li>
               </ul>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="tstbite-components my-4 my-md-5">
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
         </div>
       </div>
     </section>
