--- a/other.html
+++ b/other.html
@@ -121,11 +121,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <a href="/puddingchocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
+              <a href="/puddingchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
