--- a/sweet.html
+++ b/sweet.html
@@ -235,6 +235,18 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </div>
     </section>
   </div>
