--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -120,6 +120,7 @@
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
           <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/e.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
