--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -120,7 +120,7 @@
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
           <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
-          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/e.png" style="width:35px; height:35px"></div>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/ef.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -184,7 +184,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="maplesyrup">1/4 cup pure maple syrup</label>
+                  <label class="form-check-label" for="maplesyrup">1/4 cup maple syrup</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flakysalt">Flaky sea salt, for sprinkling</label>
+                  <label class="form-check-label" for="flakysalt">Sea salt flakes, for sprinkling</label>
                 </div>
               </div>
             </div>
@@ -227,15 +227,15 @@
                 </li>
                 <li>
                   <span>4</span>
-                  Roll into large balls, about 2-3 tablespoons of dough per each. This recipe makes about 6-7 decent sized cookies or 10 smaller cookies.
+                  To make large cookies, roll out 2-3 tablespoon-sized balls of dough. To make small cookies, roll out 1 tablespoon-sized balls of dough.
                 </li>
                 <li>
                   <span>5</span>
-                  Gently flatten the balls of dough as these don't spread much on their own. Bake for 8-10 minutes, until lightly brown. Don't over bake.
+                  Gently flatten the balls of dough. Bake for 8-10 minutes, until lightly brown. Don't overbake.
                 </li>
                 <li>
                   <span>6</span>
-                  Remove and let cool on the pan thoroughly to keep them from falling apart easily. Sprinkle with a bit of flaked sea salt, if desired.
+                  Remove and let cool on the pan thoroughly to keep them from falling apart easily. Sprinkle with a bit of sea salt flakes, if desired.
                 </li>
               </ul>
             </div>
