--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="chocolate">3/4-1 cup chocolate chips or chopped chocolate, use more or less to taste</label>
+                  <label class="form-check-label" for="chocolate">3/4 cup chocolate chips or chopped chocolate, use more or less to taste</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
