--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -157,7 +157,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>6-7 large cookies or 10 small cookies
+                <span>6-7 large cookies or 9-10 small cookies
                 </span>
               </li>
             </ul>
