--- a/samoas.html
+++ b/samoas.html
@@ -104,60 +104,120 @@
           </button>        
         </nav>
       </header>
+  </div>
 
+  <div class="container">
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
-            </figcaption>
-          </figure>
+      <div class="d-sm-flex">
+        <div class="tstbite-svg order-sm-2 ms-auto">
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/snickerdoodlecookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/snickerdoodlecookies.jpg" class="w-100" alt="Snickerdoodle Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/snickerdoodlecookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Snickerdoodle Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
+        <div>
+          <strong>
+            <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+            </svg>
+            <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+          </strong>
+          <h5 class="py-3 mb-0 h2">Coconut Fudge Samoas</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"></div>
         </div>
       </div>
+      <div class="d-flex flex-wrap">
+        <div class="my-2 me-4">
+          <small class="ps-1">Author: Me</small>
+        </div>
+        <div class="my-2 me-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
+            <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
+          </svg>
+          <small>January 15th, 2024</small>
+        </div>
+      </div>
+      <div class="blog-detail">
+        <hr>
+        <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
+          <img src="assets/images/food/samoas.jpg" class="w-100" >
+        </div>
+        <br>
+        <div class="row mt-0 mt-md-5">
+          <div class="col-md-12">
+            <ul class="list-unstyled component-list tstbite-svg">
+              <li>
+                <small>Prep Time</small>
+                <span>35 minutes</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>35 minutes</span>
+              </li>
+              <li>
+                <small>Serving</small>
+                <span>12 pieces
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-4 mt-md-5">
+              <h6>Ingredients</h6>
+              <div class="checklist pb-2">
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="shreddedcoconut">1 1/2 cups unsweetened shredded coconut</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="dates">8 dates</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="darkchocolate">1-2 dark chocolate bars</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-5">
+              <h6>Instructions</h6>
+              <ul class="instruction-list list-unstyled">
+                <li>
+                  <span>1</span>
+                  Toast shredded coconut in a pan over low heat until coconut browns.
+                </li>
+                <li>
+                  <span>2</span>
+                  Add toasted shredded coconut into a food processor with dates and blend.
+                </li>
+                <li>
+                  <span>3</span>
+                  Shape mixture into 10-12 pieces and freeze for 15 minutes on a baking sheet lined with parchment paper.
+                </li>
+                <li>
+                  <span>4</span>
+                  Melt dark chocolate and dip the bottom of each piece in the chocolate. Drizzle remaining chocolate on top of each piece.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="tstbite-components my-4 my-md-5">
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/samoas" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/samoas.jpg" class="w-100" alt="Samoas">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/samoas" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Coconut Fudge Samoas</a>
-            </figcaption>
+            <img src="assets/images/food/samoas.jpg" class="w-100" alt="Coconut Fudge Samoas">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/meringues" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
-            </figcaption>
+            <img src="assets/images/food/samoas1.jpg" class="w-100" alt="Coconut Fudge Samoas">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/samoas2.jpg" class="w-100" alt="Coconut Fudge Samoas">
           </figure>
         </div>
       </div>
@@ -170,7 +230,6 @@
   </footer>
 </section>
 
-<!-- Tastebite Scripts -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/html5.min.js"></script>
 <script src="assets/js/sticky.min.js"></script>
