--- a/sweet.html
+++ b/sweet.html
@@ -246,6 +246,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/samoas" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/samoas.jpg" class="w-100" alt="Samoas">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/samoas" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Coconut Fudge Samoas</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
