--- a/focaccia.html
+++ b/focaccia.html
@@ -251,17 +251,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia2.jpg" class="w-100" alt="Gooey Butter Bars">
+            <img src="assets/images/food/focaccia2.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia.jpg" class="w-100" alt="Gooey Butter Bars">
+            <img src="assets/images/food/focaccia.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia1.jpg" class="w-100" alt="Gooey Butter Bars">
+            <img src="assets/images/food/focaccia1.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
       </div>
