--- a/hazelnutoliveoilcake.html
+++ b/hazelnutoliveoilcake.html
@@ -184,7 +184,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 large eggs, at room temperature (substitute with <a href="https://www.bobsredmill.com/gluten-free-vegan-egg-replacer.html" target="_blank">Bob's Red Mill Egg Replacer</a> to make vegan)</label>
+                  <label class="form-check-label" for="unsalted">3 large eggs, at room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -215,7 +215,7 @@
                 </li>
                 <li>
                   <span>3</span>
-                  In a large bowl, beat the EVOO, eggs (or egg replacer), and sugar for 2-3 minutes on speed 7 of a handheld beater or until it becomes pale and thick (like pouring cream).
+                  In a large bowl, beat the EVOO, eggs, and sugar for 2-3 minutes on speed 7 of a handheld beater or until it becomes pale and thick (like pouring cream).
                 </li>
                 <li>
                   <span>4</span>
