--- a/breads.html
+++ b/breads.html
@@ -142,6 +142,16 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/bananabread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolatechipbananabread.jpg" class="w-100" alt="Chocolate Chip Banana Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bananabread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Banana Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
               <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt=" Pumpkin Bread">
             </a>
